--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TvGuide</title>
   </head>
-  <body>
+  <body class="bg-gray-900 h-full box-border antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
